fix spacing betwen recovery txt

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -101,6 +101,7 @@ $border-gray: #DDDDDD;
 }
 .actions__txt__register--small {
     font-size: 11px;
+    margin-top: 10px;
 }
 
 .actions__txt__link {
